fix spacing; add dem_support

--- a/custom.scss
+++ b/custom.scss
@@ -87,7 +87,7 @@ $alert-icons: map-merge(
     }
 
     .project-details {
-        margin-top: 0.8em;
+        margin-bottom: 2rem;
         background-color: lighten($link-color, 45%);
         font-size: 0.9rem;
         border: 1 solid transparent;
